package Dispatcher;

import Entity.Floor;
import Enums.Direction;

public class ExternalButtonDispatcher extends ButtonDispatcher{
    @Override
    public void submitRequest(Floor floor, Direction direction) {

    }
}
