package Dispatcher;

import Entity.Floor;
import Enums.Direction;

public class InternalButtonDispatcher extends ButtonDispatcher{
    @Override
    public void submitRequest(Floor floor, Direction direction) {

    }
}
