package Enums;

public enum DoorStatus {
    OPENED, CLOSED
}
