package Enums;

public enum ElevatorStatus {
    STAND_BY, MOVING
}